fix spacing

--- a/_sass/components/_profile.scss
+++ b/_sass/components/_profile.scss
@@ -91,6 +91,7 @@
 
   .em-button {
       padding: 0 .2rem;
+      margin-left: .5rem; 
       width: 4rem;
       font-size: $font-size-small;
       color: var(--color-text-muted); 
@@ -98,7 +99,7 @@
       background: inherit;
       border-radius: 10rem;
       border: 1px solid var(--color-text-muted);
-      box-shadow: 0px 0.5px 1px var(--color-image-shadow);
+      box-shadow: 0px 0.5px 1.5px var(--color-image-shadow);
       font-family: "Computer Modern Sans Serif", sans-serif; 
 
     &:hover {
